# midpoint

./: .gitignore  Cargo.toml  README.md  gulpfile.js  index.css  index.html  package-lock.json  package.json  styles.css
public/lib/phosphor-css/: package.json
public/lib/phosphor-css/css/: bold.css  duotone.css  fill.css  index.css  light.css  regular.css  thin.css
public/lib/phosphor-css/less/: bold.less  duotone.less  fill.less  index.less  light.less  regular.less  thin.less
public/lib/phosphor-css/sass/: bold.scss  duotone.scss  fill.scss  index.scss  light.scss  regular.scss  thin.scss
public/samples/: replicate-prediction-cheeseburger.glb
sass/: index.scss
src/: app.rs  components.rs  contexts.rs  gql.rs  lib.rs  main.rs  renderer.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: ComponentView.rs  FileBrowser.rs  FileViewer.rs  MdButton.rs  MdFileInput.rs  MdIcon.rs  PrimaryToolbar.rs  PrimaryView.rs  ProjectSocket.rs  SceneCanvas.rs  SceneView.rs  TokenLoader.rs  ViewNav.rs
src/contexts/: global.rs  local.rs  localAsync.rs  saved.rs
src/gql/: createMdProject.rs  deleteMdProject.rs  generateConcept.rs  generateModel.rs  generateTexture.rs  getMdProject.rs  getMdProjects.rs  updateMdProject.rs
src/renderer/: Grid.rs  Landscape.rs  Model.rs  SimpleCamera.rs  Texture.rs  Transform.rs  core.rs  shapes.rs
src/renderer/shaders/: primary_fragment.wgsl  primary_vertex.wgsl
src/renderer/shapes/: Cube.rs  Pyramid.rs
