[package]
name = "midpoint-ui"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
yew = { version = "0.21", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1.7"
wgpu = "0.20.0"
raw-window-handle = "0.6.2"
winit = { version = "0.29.15", features = ["rwh_05"] }

[dependencies.web-sys]
version = "0.3"
features = [
  "Document",
  "Window",
  "Element",
  "DomRect",
  "HtmlCanvasElement",
  "Gpu"
]

[workspace]
members = ["src-tauri"]
