[package]
name = "midpoint-ui"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
yew = { version = "0.21", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
serde_json = "1"
console_error_panic_hook = "0.1.7"
wgpu = "0.20.0"
raw-window-handle = "0.6.2"
winit = { version = "0.29.15", features = ["rwh_05"] }
nalgebra = "0.32.5"
nalgebra-glm = "0.18.0"
bytemuck = "1.15.0"
futures = "0.3"
image = "0.25.1"
reqwest = { version = "0.12.4", features = ["json"] }
reqwest-graphql = "1.0.0"
base64 = "0.22.1"
regex = "1"
uuid = { version = "1.8.0", features = ["v4"] }

[dependencies.web-sys]
version = "0.3"
features = [
  "Document",
  "Window",
  "Element",
  "DomRect",
  "HtmlCanvasElement",
  "Gpu"
]

[dependencies.gltf]
version = "1"

[build-dependencies]
tauri-build = { version = "1.5.2", features = [] }

[workspace]
members = ["src-tauri"]

[[bin]]
name = "main"
path = "src/main.rs"
